# useless-classes

./: README.md  pyproject.toml
src/useless_classes/: __init__.py
